{
  "version": 4,
  "terraform_version": "1.16.2",
  "serial": 47,
  "lineage": "104e664f-6f8d-00b4-6041-26eb6366c32a",
  "resources": [
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:833822619479:loadbalancer/app/devops-portfolio-alb/8f657aa3300b6fc7",
            "arn_suffix": "app/devops-portfolio-alb/8f657aa3300b6fc7",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "devops-portfolio-alb-1824700790.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:833822619479:loadbalancer/app/devops-portfolio-alb/8f657aa3300b6fc7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "devops-portfolio-alb",
            "preserve_host_header": false,
            "region": "ap-south-1",
            "security_groups": [
              "sg-03440bbef97525425"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02f87440b2859c01e"
              },
              {
                "subnet_id": "subnet-0f83880aff61e3f36"
              }
            ],
            "subnets": [
              "subnet-02f87440b2859c01e",
              "subnet-0f83880aff61e3f36"
            ],
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-portfolio-alb",
              "Project": "DevOps Portfolio Platform"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-portfolio-alb",
              "Project": "DevOps Portfolio Platform"
            },
            "vpc_id": "vpc-00e5ce889bc0cd168",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:833822619479:loadbalancer/app/devops-portfolio-alb/8f657aa3300b6fc7"
          },
          "dependencies": [
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:833822619479:listener/app/devops-portfolio-alb/8f657aa3300b6fc7/788834278e0534be",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:833822619479:targetgroup/devops-portfolio-tg/37b8873a5053bd01",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:833822619479:listener/app/devops-portfolio-alb/8f657aa3300b6fc7/788834278e0534be",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:833822619479:loadbalancer/app/devops-portfolio-alb/8f657aa3300b6fc7",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-south-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:833822619479:listener/app/devops-portfolio-alb/8f657aa3300b6fc7/788834278e0534be"
          },
          "dependencies": [
            "module.ecs.aws_lb.this",
            "module.ecs.aws_lb_target_group.this",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:833822619479:targetgroup/devops-portfolio-tg/37b8873a5053bd01",
            "arn_suffix": "targetgroup/devops-portfolio-tg/37b8873a5053bd01",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/api/health",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:833822619479:targetgroup/devops-portfolio-tg/37b8873a5053bd01",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:833822619479:loadbalancer/app/devops-portfolio-alb/8f657aa3300b6fc7"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "devops-portfolio-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-portfolio-tg",
              "Project": "DevOps Portfolio Platform"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-portfolio-tg",
              "Project": "DevOps Portfolio Platform"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-00e5ce889bc0cd168"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:833822619479:targetgroup/devops-portfolio-tg/37b8873a5053bd01"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:833822619479:security-group/sg-0113e6891f9e63a95",
            "description": "Security group for DevOps Portfolio ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0113e6891f9e63a95",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Application traffic from ALB",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03440bbef97525425"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "devops-portfolio-ecs-sg",
            "name_prefix": "",
            "owner_id": "833822619479",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-portfolio-ecs-sg",
              "Project": "DevOps Portfolio Platform"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-portfolio-ecs-sg",
              "Project": "DevOps Portfolio Platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e5ce889bc0cd168"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "833822619479",
            "id": "sg-0113e6891f9e63a95",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:833822619479:internet-gateway/igw-053933e9f088a10c2",
            "id": "igw-053933e9f088a10c2",
            "owner_id": "833822619479",
            "region": "ap-south-1",
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-portfolio-igw",
              "Project": "DevOps Portfolio Platform"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-portfolio-igw",
              "Project": "DevOps Portfolio Platform"
            },
            "vpc_id": "vpc-00e5ce889bc0cd168"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "833822619479",
            "id": "igw-053933e9f088a10c2",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-053933e9f088a10c2",
            "id": "r-rtb-0d57887a4d30e82861080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-0d57887a4d30e8286",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "833822619479",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-1",
            "route_table_id": "rtb-0d57887a4d30e8286"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:833822619479:route-table/rtb-0d57887a4d30e8286",
            "id": "rtb-0d57887a4d30e8286",
            "owner_id": "833822619479",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-053933e9f088a10c2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-portfolio-public-rt",
              "Project": "DevOps Portfolio Platform"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-portfolio-public-rt",
              "Project": "DevOps Portfolio Platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e5ce889bc0cd168"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "833822619479",
            "id": "rtb-0d57887a4d30e8286",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-063fd82645f06bd26",
            "region": "ap-south-1",
            "route_table_id": "rtb-0d57887a4d30e8286",
            "subnet_id": "subnet-02f87440b2859c01e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "833822619479",
            "id": "rtbassoc-063fd82645f06bd26",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01227decea3fc5f11",
            "region": "ap-south-1",
            "route_table_id": "rtb-0d57887a4d30e8286",
            "subnet_id": "subnet-0f83880aff61e3f36"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "833822619479",
            "id": "rtbassoc-01227decea3fc5f11",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:833822619479:security-group/sg-03440bbef97525425",
            "description": "Security group for DevOps Portfolio Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03440bbef97525425",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "devops-portfolio-alb-sg",
            "name_prefix": "",
            "owner_id": "833822619479",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-portfolio-alb-sg",
              "Project": "DevOps Portfolio Platform"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-portfolio-alb-sg",
              "Project": "DevOps Portfolio Platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e5ce889bc0cd168"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "833822619479",
            "id": "sg-03440bbef97525425",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:833822619479:subnet/subnet-02f87440b2859c01e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f87440b2859c01e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "833822619479",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-portfolio-public-1",
              "Project": "DevOps Portfolio Platform",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-portfolio-public-1",
              "Project": "DevOps Portfolio Platform",
              "Tier": "public"
            },
            "vpc_id": "vpc-00e5ce889bc0cd168"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "833822619479",
            "id": "subnet-02f87440b2859c01e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:833822619479:subnet/subnet-0f83880aff61e3f36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f83880aff61e3f36",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "833822619479",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-portfolio-public-2",
              "Project": "DevOps Portfolio Platform",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-portfolio-public-2",
              "Project": "DevOps Portfolio Platform",
              "Tier": "public"
            },
            "vpc_id": "vpc-00e5ce889bc0cd168"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "833822619479",
            "id": "subnet-0f83880aff61e3f36",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:833822619479:vpc/vpc-00e5ce889bc0cd168",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cab9a5c720e6431a",
            "default_route_table_id": "rtb-050a3fe5940888a39",
            "default_security_group_id": "sg-0278530b5c1545ce4",
            "dhcp_options_id": "dopt-06ebe397c8c6fb853",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00e5ce889bc0cd168",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-050a3fe5940888a39",
            "owner_id": "833822619479",
            "region": "ap-south-1",
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-portfolio-vpc",
              "Project": "DevOps Portfolio Platform"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-portfolio-vpc",
              "Project": "DevOps Portfolio Platform"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "833822619479",
            "id": "vpc-00e5ce889bc0cd168",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}